# dfs-folder-print

./: .gitignore  main.py  pyproject.toml
algo/: dfs.py
generate/: generate_folder_graph.py
